force-app/main/default/objects/Inservice_Absence_Excuse__c/Inservice_Absence_Excuse__c.object-meta.xml
<CustomObject>
    <label>Inservice Absence Excuse</label>
    <nameField>
        <displayFormat>EX-{000}</displayFormat>
        <label>Inservice Absence Excuse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inservice Absence Excuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>