force-app/main/default/objects/Inservice_Absence_Excuse__c/fields/Day_Absent__c.field-meta.xml
<CustomField>
    <fullName>Day_Absent__c</fullName>
    <label>Day Absent</label>
    <required>true</required>
    <type>Date</type>
</CustomField>