force-app/main/default/objects/Inservice_Absence_Excuse__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>